appId: ${APP_ID}
---
- runFlow: login_mock.yaml
- assertVisible:
    id: "devices.settingsButton"
- tapOn:
    id: "devices.settingsButton"
- extendedWaitUntil:
    visible:
      id: "settings.screen"
    timeout: 10000
- assertVisible:
    id: "settings.accountHeader"
- assertVisible:
    id: "settings.version"
- scrollUntilVisible:
    element:
      id: "settings.voiceDisclose"
    direction: DOWN
    timeout: 10000
- assertVisible:
    id: "settings.voiceDisclose"
- scrollUntilVisible:
    element:
      id: "settings.logoutButton"
    direction: DOWN
    timeout: 10000
- assertVisible:
    id: "settings.logoutButton"
- tapOn:
    id: "settings.backButton"
- assertVisible:
    id: "devices.screen"
